id to class shift and delete iframe alt--fix html

--- a/styles/base-larger.css
+++ b/styles/base-larger.css
@@ -1,6 +1,6 @@
 @media (min-width: 580px) {
     body {
-        font-size: 2.3vw;
+        font-size: 1.6vw;
     }
 
     h1 {
